--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "vite": "^7.0.4"
