--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "live-server": "^1.2.2",
     "prettier": "^3.6.2"
   }
