--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@types/node": "^24.0.15",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "vite": "^7.0.4"
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
-    "live-server": "^1.2.2",
-    "prettier": "^3.6.2"
+    "live-server": "^1.2.2"
+  },
+  "scripts": {
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   }
 }
