--- a/package.json
+++ b/package.json
@@ -14,14 +14,9 @@
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
-    "vite": "^7.0.4"
+    "vite": "^5.2.0"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.10",
-    "live-server": "^1.2.2"
-  },
-  "scripts": {
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "@googlemaps/js-api-loader": "^1.16.10"
   }
 }
